--- a/css/color.css
+++ b/css/color.css
@@ -6,7 +6,38 @@
 
 body {
     min-height: 100vh;
-    background: burlywood;
+    background: rgb(245, 218, 183);
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.title {
+    font-size: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 40px;
+    color: white;
+}
+
+.subtitle {
+    margin: 0;
+    color: #000;
+    display: inline;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+
+.eat {
+    color: #fff;
+    margin: 7px 0;
+    font-size: 500px;
+    font-weight: 600;
+    text-shadow: 2px 2px 1px rgba(0, 0, 0, .7);
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    margin-top: 0;
+}
+
+.line-division {
+    width: 80%;
+    height: 2px;
+    background-color: #36221c;
+
+}
