--- a/css/color.css
+++ b/css/color.css
@@ -6,38 +6,67 @@
 
 body {
     min-height: 100vh;
-    background: rgb(245, 218, 183);
+    background: rgb(250, 117, 255);
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .title {
-    font-size: 40px;
+    font-size: 50px;
     font-family: Arial, Helvetica, sans-serif;
     margin-bottom: 40px;
     color: white;
+    
 }
 
 .subtitle {
+    font-size: 40px;
     margin: 0;
     color: #000;
     display: inline;
-    font-weight: 500;
+    font-weight: bold;
     text-transform: uppercase;
 }
 
 .eat {
     color: #fff;
     margin: 7px 0;
-    font-size: 500px;
-    font-weight: 600;
+    font-size: 25px;
+    font-weight: 60;
     text-shadow: 2px 2px 1px rgba(0, 0, 0, .7);
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     margin-top: 0;
 }
 
 .line-division {
-    width: 80%;
+    width: 85%;
     height: 2px;
     background-color: #36221c;
 
+}
+
+.carousel {
+    min-height: 00px;
+}
+
+.carousel .carousel-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    user-select: none;
+    background-color: silver;
+    width: 500px;
+    height: 500px;
+    border-radius: 15px;
+
+}
+
+.carousel .carousel-item img {
+z-index: -1;
+width: 100%;
+height: 100%;
+object-fit: cover;
+position: absolute;
+top: 0;
+border-radius: 15px;
 }
