--- a/css/eventcolor.css
+++ b/css/eventcolor.css
@@ -82,3 +82,14 @@ input[type="submit"]{
     color: blue;
     cursor: not-allowed;
 }
+
+.textos {
+    display: inline-block;
+    background-color: rgb(99, 99, 250);
+    border-radius: 10px;
+    border: 1px solid rgb(65, 65, 253);
+    padding: 10px 20px;
+    cursor: pointer;
+    color: white;
+    margin: 5px;
+}
