--- a/css/tono.css
+++ b/css/tono.css
@@ -46,7 +46,7 @@ header {
     width: 50px;
     height: 50px;
     border-radius: 10px;
-    border: 1px solid #5b4a9a;
+    border: 3px solid #5b4a9a;
 }
 
 .mains {
@@ -59,7 +59,7 @@ header {
     font-size: 22px;
     border-bottom: 2px solid transparent;
     margin-left:40px;
-    color: #000;
+    color: #31149b;
     text-decoration: none;
     transition: all 0.35s ease;
 }
@@ -67,3 +67,65 @@ header {
 .mains:hover {
  border-bottom: 2px solid #5b4a9a;
 }
+
+main {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+
+}
+
+main .contenedor-img {
+    max-width: 60%;
+    margin-right: 40px;
+}
+
+/* .contenedor-texto {
+    border: 2px solid #5b4a9a;
+} */
+
+.contenedor-texto .title{
+    font-size: 50px;
+    font-weight: normal;
+    margin-bottom: 40px;
+}
+
+
+.contender-texto .mascota {
+    font-weight: bold;
+    color: #c99806;
+    font-style: normal;
+}
+
+.contenedor-texto p {
+    margin-bottom: 40px;
+    line-height: 36px;
+    color: #5b4a9a;
+}
+
+.btn-link {
+    display: inline-block;
+    padding: 10px 30px;
+    border-radius: 100px;
+    text-decoration: none;
+    background: #5b4a9a;
+    color: white;
+}
+
+.btn-link:hover, 
+.btn-link.activo {
+    color: white;
+    background: #5b4a9a;
+}
+
+
+@media screen and (max-width:915px) {
+    main {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    main .contenedor-img {
+        margin-bottom: 40px;
+    }
+};
